# Crisis

./: .env.sample  README.md  app.py  forms.py  pyproject.toml  requirements.txt
templates/admin/: incident_details.html
templates/auth/: login.html
templates/rescue/: incident_details.html
templates/user/: incident_details.html  report_incident.html
