[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.10,<3.12"

dependencies = [
    "email-validator>=1.3,<2",
    "flask-wtf>=1.0,<2",
    "flask>=2.2,<3",
    "flask-sqlalchemy>=2.5,<3",
    "gunicorn>=20,<24",
    "psycopg2-binary>=2.9,<3",
    "sqlalchemy>=1.4,<2",
    "werkzeug>=2.0,<3",
    "flask-login>=0.5,<1",
    "wtforms>=2.3,<4"
]
